--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,8 @@
     <title>Django + Hotwire • TodoMVC</title>
     <link rel="stylesheet" href="{% static 'todomvc-common/base.css' %}">
     <link rel="stylesheet" href="{% static 'todomvc-app-css/index.css' %}">
+
+    <script src="{% static '@hotwired/turbo/dist/turbo.es5-umd.js' %}"></script>
   </head>
   <body>
     <section class="todoapp">
