Adding hotwire and turbo views.

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,8 @@
     <section class="todoapp">
       {% block content %}{% endblock content %}
     </section>
-    <footer class="info">
+
+    <footer class="info" data-turbo-permanent>
       <p>Double-click to edit a todo</p>
       <p>Created by <a href="http://github.com/luanfonceca">Luan Fonseca</a></p>
       <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
